small fixes on open sidebar: prevent body from scrolling on small devices.

--- a/src/scss/definitions/_box.scss
+++ b/src/scss/definitions/_box.scss
@@ -4,4 +4,5 @@
   @include colors(false, false, true);
   overflow: auto;
   box-shadow: inset 0 0 0 2px rgba(0,0,0,0.02);
+  -webkit-overflow-scrolling: touch;
 }
